# JSONate

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
jsonate/: decorators.py  fields.py  form_fields.py  http.py  json_encoder.py  request_handler.py  utils.py  widgets.py
test_project/: settings.py
test_project/test_app/: models.py  tests.py
test_project/test_app/migrations/: 0008_alter_mymodel_null_field.py  0008_auto_20210922_0908.py  0009_alter_mymodel_datetime_field.py
