[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonate"
version = "0.7.7"
authors = [
    {name = "James Robert"},
    {email = "jiaaro@gmail.com"}
]
description = "Django library that can make ANYTHING into json"
license = {text = "MIT"}
keywords = ["django", "json", "templatetags"]
urls = {homepage = "http://jsonate.com"}
requires-python = ">=3.8"
dependencies = ["django>=4.1.3"]
readme = "README.markdown"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Framework :: Django",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]