[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonate"
version = "0.7.11"
authors = [
    {name = "James Robert"},
    {email = "jiaaro@gmail.com"}
]
description = "Django library that can make ANYTHING into json"
license = {text = "MIT"}
keywords = ["django", "json", "templatetags"]
urls = {homepage = "http://jsonate.com"}
requires-python = ">=3.11"
dependencies = ["django>=4.2.6"]
readme = "README.md"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Framework :: Django",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

[tool.setuptools]
packages = ["jsonate", "jsonate.templatetags"]